# agentic-app-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEBUG_MODE_ISSUE.md  IMPLEMENTATION.md  MANIFEST.in  PUBLISHING.md  README.md  USAGE.md  main.py  preview_colors.py  pyproject.toml  test_debug_mode_issue.sh
agentic_api_cli/: __init__.py  api_reference.py  cli.py  client.py  config.py  exceptions.py  logging_config.py  profiles.py
tests/: test_api_reference.py  test_cli.py  test_client.py  test_config.py  test_exceptions.py  test_logging_config.py
